# asyncinotify

./: README.rst  justfile  pyproject.toml
src/asyncinotify/: __init__.py  _ffi.py
