[project]
name = 'asyncinotify'
dynamic = ['description', 'version']
readme = 'README.rst'
requires-python = '>= 3.6, < 4'
license = 'MPL-2.0'
keywords = [
    'async',
    'inotify',
]

classifiers=[
    'Development Status :: 6 - Mature',
    'Framework :: AsyncIO',
    'Intended Audience :: Developers',
    'Operating System :: POSIX :: BSD :: FreeBSD',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries',
]

[[project.authors]]
name = "Taylor C. Richberger"
email = "taylor.richberger@procern.com"

[project.urls]
repository  = 'https://github.com/ProCern/asyncinotify/'
documentation = 'https://asyncinotify.readthedocs.io/'

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.12,<4"]
